2006-01-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.3.3

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.3.3.

2006-01-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol (prepare_eggs):
	  New function to adapt to PyEnchant choice of egg distribution.

	* lib/gaupol/gtk/delegates/guiinit.py:
	* lib/gaupol/gtk/delegates/view.py:
	  Renamed output window close signal to "close".

	* lib/gaupol/gtk/output.py:
	  Renamed output window close signal to "close".
	  Added Ctrl+W accelerator to close the window.

	* test/info:
	* test/pyenchant:
	  Adapted to PyEnchant's egging.

2006-01-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/fileopen.py:
	  (SelectVideoAction.is_doable): Return False if page.project.main_file
	  is None.

2006-01-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	  Redesigned the preview tab's video player section.

	* data/glade/previewerror-dialog.glade:
	  Turned wrap on for the text view.

	* lib/gaupol/base/delegates/preview.py:
	  (PreviewDelegate._get_subtitle_path): Fixed the file saving.
	  (PreviewDelegate.preview): Added command to output.

	* lib/gaupol/constants.py:
	  (VideoPlayer): New class.

	* lib/gaupol/gtk/delegates/preview.py:
	  Adapted to new configs and constants.

	* lib/gaupol/gtk/dialogs/preferences.py:
	  Adapted to redesigned preview tab's video player section.
	  Cosmetic fixes on sensitivity sets and signal connections.

	* lib/gaupol/gtk/util/config.py:
	  Changed window sizes to golden ratios.
	  (preview): Redesigned options.
	  (_fix_changed_options): Removed as obsolete.
	  (_set_config_option, _set_parser_option): Fixed bugs caused by
	  earlier coding style changes.

2006-01-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  (OpenVideoDialog): Revert default filter back to "All files".

2006-01-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/stat.py:
	* lib/gaupol/base/files/microdvd.py: