@@ -127,7 +127,10 @@ def prepare_eggs():
     except ImportError:
         try:
             import pkg_resources
-            pkg_resources.require('pyenchant')
+            try:
+                pkg_resources.require('pyenchant')
+            except pkg_resources.DistributionNotFound:
+                pass
         except ImportError:
             pass
     except enchant.Error:
