@@ -48,9 +48,13 @@ try:
 except ImportError:
     try:
         import pkg_resources
-        pkg_resources.require('pyenchant')
-        import enchant
-        print enchant.__version__
+        try:
+            pkg_resources.require('pyenchant')
+        except pkg_resources.DistributionNotFound:
+            print 'Not found'
+        else:
+            import enchant
+            print enchant.__version__
     except ImportError:
         print 'Not found'
 except enchant.Error, message:
